@@ -4,7 +4,8 @@ Changes
 1.7 (unreleased)
 ----------------
 
-- Nothing changed yet.
+* Add missing provider, global_adapter, implementsOnly, classProvides() to
+  the module interface so that they are included in __all__
 
 
 1.6 (2009-04-10)
